# Data-Analysis-Python-project

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: example.csv
src/: check.py  csv_summary.py
